test/onceCall1.slq

def main(){
	x:=H(0); /// error
	y:=H(0);
	f:=()⇒CNOT(x,y); /// error
	return f();
}
